# hello-cmake

./: CMakeLists.txt  cmake-learning-roadmap.md  cmake-progress.md
src/: CMakeLists.txt  main.cpp  print.cpp
